# Intro-to-Mongo-DB

./: README.md  Snippets.md  app.py  repository.py
nodeApp/: db.js  index.js  package-lock.json  package.json  setup.md
python/: app.py  pyproject.toml  repository.py
