[tool.poetry]
name = "intro-to-mongo-db"
version = "0.1.0"
description = ""
authors = ["davibaweja <davibaweja@gmail.com>"]
readme = "README.md"
packages = [{include = "intro_to_mongo_db"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pymongo = "^4.3.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
